--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
 </head>
 <body>
   <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container">
       <h1 id="logo" class="navbar-brand"><%= link_to "spcs", root_path %></h1>
 
         <ul class="nav navbar-nav navbar-right">
