--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -6,34 +6,35 @@
 <div id='messages' class="row">
 </div>
 
-<div class="row"><%= form_tag new_booking_message_path(@booking), :id => "form" do %>
+<div class="row">
+  <%= form_tag new_booking_message_path(@booking), :id => "form" do %>
   <div id="msg-data-carrier"
   data-from-user-id="<%= current_user.id %>"
   data-address="<%=@booking.listing.address %>"
   data-to-user-id="<%= @booking.other_party(current_user).id %>"
   data-booking-id="<%= @booking.id %>"
    ></div>
-  <div id="to>">
+  <div id="to>" class="col-xs-12">
     <%= label_tag :to, nil, id: "to-user-tag" %>
     <%= text_field_tag :receiver,@booking.receipient(current_user), :id => "toUser", :disabled=>true %>
     <%= hidden_field_tag "booking_id", @booking.id%>
   </div>
-  <div id = "from>">
+  <div id="from>" class="col-xs-12">
     <%= label_tag :from, nil, id: "from-user-tag" %>
     <%= text_field_tag :sender, current_user.first_name, :id => "fromUser", :disabled=>true%>
   </div>
-
+</div>
   <div class="row">
-    <div id="body messaging-body col-sm-9">
-      <%= text_area_tag :body, nil, :id => "msgText", class: "col-sm-9", rows: 4%>
+    <div id="body messaging-body">
+      <%= text_area_tag :body, nil, :id => "msgText", rows: 4, class: "col-xs-9"%>
     </div>
 
     <div class="submit">
-      <%= submit_tag("Send Message", class: "col-sm-3 btn btn-default", id: "submit-message") %>
+      <%= submit_tag("Send", class: "btn btn-default", id: "submit-message", class: "col-xs-3") %>
     </div>
   </div>
   <% end %>
-</div>
+
 
 </div>
 
