--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -38,6 +38,7 @@ li{
     width: 100%;
     margin: auto;
   }
+
 }
 #message-title{
   text-align: center;
@@ -65,16 +66,13 @@ li{
   margin-top: 1.7em;
   margin-bottom: 1.7em;
 }
+
 #user-info{
-  font-size: 1.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
-#profile-content{
-  margin-top: 4em;
-  font-size: 1.2em;
-}
-#proftabs{
-  font-size: 1.3em;
-}
+
+
 
 .bubble {
   background-image: linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
