--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,8 +62,16 @@
 <body>
   <nav class="navbar navbar-default">
     <div class="container">
-      <h1 id="logo" class="navbar-brand"><%= link_to "spcs", root_path %></h1>
-
+       <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <h1 id="logo" class="navbar-brand"><%= link_to "spcs", root_path %></h1>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
           <li id="username"><%= link_to current_user.first_name, user_path(current_user.id) %><li>
@@ -79,6 +87,7 @@
           <li id="signup"><%= link_to 'Sign up', new_user_registration_path %></li>
       <% end %>
         </ul>
+      </div>
     </div>
   </nav>
   <% if flash.any? %>
