--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -184,3 +184,11 @@ input#term:focus {
 #vehicleClass p {
   white-space: normal;
 }
+
+#submit-listing-btn {
+  margin-top: 1em;
+}
+
+#p-spot-header {
+  margin-bottom: 1em;
+}
