Add change submit listing color to green

--- a/app/views/parking_slots/index.html.erb
+++ b/app/views/parking_slots/index.html.erb
@@ -3,4 +3,4 @@
 	<%=link_to "Edit Parking Spot #{i+1}", parking_slot_path(p.id), class: "btn btn-primary btn-block btn-lg"%>
 <%end%>
 
-<%= link_to "Submit Listing", root_path, class: "btn btn-primary btn-block btn-lg", id:'submit-listing-btn' %>
+<%= link_to "Submit Listing", root_path, class: "btn btn-success btn-primary btn-block btn-lg", id:'submit-listing-btn' %>
