--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -12,21 +12,26 @@
         <% end %></p>
     </div>
 
-  <% if owns?(@listing) %>
-    <div id="delete-listing-btn">
-      <%= link_to "Delete Listing", listing_path(@listing), {method: :delete, data: {confirm: "Are you sure you want to delete this listing?"}}  %>
+    <div class="row" id="listing-btns">
+      <div class="col-xs-6 btn-lg">
+      <% if owns?(@listing) %>
+        <div id="delete-listing-btn">
+          <%= link_to "Delete Listing", listing_path(@listing), {method: :delete, data: {confirm: "Are you sure you want to delete this listing?"}}  %>
+        </div>
+      <% else %>
+        <div id="book-listing-btn">
+          <button onClick="showCalendar()" class="btn btn-success">Check Availability</button>
+        </div>
+      <% end %>
+      </div>
+      <div class="col-xs-6 btn-lg">
+      <% unless current_user.favorite_listings.exists?(id: @listing.id) %>
+        <%= link_to 'Add to favorites', listing_favorite_listings_path(listing_id: @listing), method: :post, class: "btn btn-default" %>
+      <% else %>
+        <%= link_to 'Remove from favorites', listing_favorite_listing_path(listing_id:@listing.id, favorite_listing_id: @listing.id), method: :delete, class: "btn btn-default" %>
+      <% end %>
+      </div>
     </div>
-  <% else %>
-    <div id="book-listing-btn">
-      <button onClick="showCalendar()" class="btn btn-success">Check Availability</button>
-    </div>
-  <% end %>
-
-    <% unless current_user.favorite_listings.exists?(id: @listing.id) %>
-      <%= link_to 'Add to favorites', listing_favorite_listings_path(listing_id: @listing), method: :post, class: "btn btn-default" %>
-    <% else %>
-      <%= link_to 'Remove from favorites', listing_favorite_listing_path(listing_id:@listing.id, favorite_listing_id: @listing.id), method: :delete, class: "btn btn-default" %>
-    <% end %>
   </div>
 
   <div class = "tabbable">
