fix issue on messages index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,5 +102,11 @@
   <div class="container">
     <%= yield %>
   </div>
+  <script>
+    <% if current_user %>
+      window.appCurrentUserId = <%= current_user.id %>
+    <% end %>
+  </script>
+
 </body>
 </html>
