--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,18 +1,38 @@
-<h2>WELCOME!</h2>
+<div class="form-group col-xs-12" id="searchInput">
+  <label for="term">Destination</label>
+  <input id="term" name="term" type="text" class="form-control" placeholder=" Where are you going?">
+</div>
+<div class="form-group col-xs-5">
+  <label for="arrival_date">Arrival Date</label>
+  <input type="text" name="arrival_date" class="form-control" placeholder="Arrival Date" onfocus="getCalendar(0,'arrival')" data-offset="0" data-current="none" id="searchArrivalDate">
+</div>
+<div class="form-group col-xs-5">
+  <label for="departure_date">Departure Date</label>
+  <input type="text" name="departure_date" class="form-control" placeholder="Departure Date" onfocus="getCalendar(0,'departure')" id="searchDepartureDate">
+</div>
+<div class="form-group col-xs-2">
+  <button class="btn btn-primary btn-block btn-lg" id="toggle-view-btn">Show Map</button>
+</div>
 
-<div id="search-div">
-  <div id="search-message">
-    <p>Where would you like to search today?</p>
-  </div>
-  <input id="term" name="term" type="text" class="controls" placeholder="Enter a location" %>
+<div class="col-xs-12" id="filterCalendarView"></div>
+
+<div class="col-xs-12">
+  <button type="submit" class="btn btn-primary btn-block" id="searchSubmitButton">Search</button>
 </div>
 
 
-<div id="map-container">
-  <div id="map"></div>
-</div>
+<!-- <div id="map-container" class="hide"> -->
+  <div id="map" class="hide"></div>
+<!-- </div> -->
 
-<div class="single-listing">
+<!-- <div class="single-listing">
 </div>
+ -->
 
-</div>
+ <div id="searchListing">
+   <%if @listings%>
+    <%@listings.each do |listing|%>
+      <p><%=listing.address%></p>
+    <%end%>
+  <%end%>
+ </div>
