--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -16,7 +16,7 @@
       <div class="col-xs-6 btn-lg">
       <% if owns?(@listing) %>
         <div id="delete-listing-btn">
-          <%= link_to "Delete Listing", listing_path(@listing), {method: :delete, data: {confirm: "Are you sure you want to delete this listing?"}} %>
+          <%= link_to "Delete Listing", listing_path(@listing), {method: :delete, data: {confirm: "Are you sure you want to delete this listing?"}, class: "btn btn-danger" }%>
         </div>
       <% else %>
         <div id="book-listing-btn">
