--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -8,11 +8,11 @@
 </div>
 <div class="form-group col-xs-6">
   <label for="arrival_date">Arrival Date</label>
-  <input type="text" name="arrival_date" class="form-control" placeholder="Arrival Date" onfocus="getCalendar(0,'arrival')" data-offset="0" data-current="none" id="searchArrivalDate">
+  <input type="text" name="arrival_date" class="form-control" placeholder="DD/MM/YYYY" onfocus="getCalendar(0,'arrival')" data-offset="0" data-current="none" id="searchArrivalDate">
 </div>
 <div class="form-group col-xs-6">
   <label for="departure_date">Departure Date</label>
-  <input type="text" name="departure_date" class="form-control" placeholder="Departure Date" onfocus="getCalendar(0,'departure')" id="searchDepartureDate">
+  <input type="text" name="departure_date" class="form-control" placeholder="DD/MM/YYYY" onfocus="getCalendar(0,'departure')" id="searchDepartureDate">
 </div>
 
 <div class="col-xs-12" id="filterCalendarView"></div>
